fix: margin bugs and scroll jump

--- a/services/web-app/components/footer/footer.module.scss
+++ b/services/web-app/components/footer/footer.module.scss
@@ -12,7 +12,7 @@
 @use '@carbon/react/scss/type' as type;
 
 .container {
-  margin-right: -2px;
+  margin-right: -1px;
   background: colors.$black-100;
 }
 
