--- a/services/web-app/styles/_base.scss
+++ b/services/web-app/styles/_base.scss
@@ -36,13 +36,14 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin-right: 2px;
+  overscroll-behavior: none;
 }
 
 #__next {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  margin-right: 1px;
 }
 
 [hidden] {
